# igdtuw-chatbot

./: .gitignore  app.py  build_vectorstore.py  pyproject.toml  qna_vectorstore.py  rag_agent.py  urls.txt
utils/: clean_web_content.py  extract_pdf_content.py  igdtuw_crawler.py  merge_web_and_pdf.py  pdf_downloader.py  sheets_to_qna.py  website_urls_fetcher.py
vectorstore_web_gemini/408d855a-d3f0-4c5c-b37b-9a39c1614c3d/: index_metadata.pickle
vectorstore_web_gemini/7f8a0e67-f96c-4211-bebb-0db43f0b9471/: index_metadata.pickle
